--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <body>
         <div id="header">
             <h1>Today is Cristopher's birthday 🎉</h1>
-            <img
-                id="bff-img"
-                src="images/Screenshot 2025-08-21 at 15.22.37.jpg"
-            />
+            <img id="bff-img" src="images/cris.png" />
             <h2 id="bday-age">84 years old</h2>
             <h4 id="bday-date">01.11.2022</h4>
         </div>
